--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -87,14 +87,14 @@ body {
     }
 
     // Shimmer
-    .shimmer{
-      width:100%;
-      gap:150px;
+    .shimmer {
+      width: 100%;
+      gap: 150px;
       @media screen and (max-width: 750px) {
-          gap: 50px;
+        gap: 50px;
       }
       @media screen and (max-width: 450px) {
-          gap: 20px;
+        gap: 20px;
       }
     }
     //NAVBAR
@@ -124,9 +124,9 @@ body {
           @media screen and (max-width: 450px) {
             gap: 12px;
           }
-          .username{
+          .username {
             @media screen and (max-width: 450px) {
-            display: none;
+              display: none;
             }
           }
           .link {
@@ -190,6 +190,10 @@ body {
       align-items: center;
       justify-content: space-between;
       font-size: 14px;
+      @media screen and (max-width: 520px) {
+        flex-direction: column;
+        font-size: 12px;
+      }
       .logo {
         a {
           font-size: 2rem;
@@ -214,6 +218,7 @@ body {
         @media screen and (max-width: 750px) {
           gap: 50px;
         }
+
         .post {
           display: flex;
           gap: 100px;
@@ -224,9 +229,14 @@ body {
           @media screen and (max-width: 750px) {
             gap: 10px;
           }
-
+          @media screen and (max-width: 600px) {
+            flex-direction: column;
+          }
           &:nth-child(2n + 1) {
             flex-direction: row-reverse;
+            @media screen and (max-width: 600px) {
+              flex-direction: column;
+            }
           }
 
           .img {
@@ -261,6 +271,7 @@ body {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            gap: 1rem;
             @media screen and (max-width: 1250px) {
               flex: 4;
             }
@@ -288,7 +299,7 @@ body {
                 font-size: 20px;
               }
               @media screen and (max-width: 575px) {
-                font-size: 26px;
+                font-size: 24px;
                 font-weight: 600;
               }
               @media screen and (max-width: 505px) {
@@ -305,10 +316,16 @@ body {
                 font-size: 16px;
               }
               @media screen and (max-width: 750px) {
-                font-size: 12px;
+                font-size: 14px;
               }
               @media screen and (max-width: 575px) {
-                display: none;
+                // display: none;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+              }
+              @media screen and (max-width: 420px) {
+                font-size: 12px;
               }
             }
 
@@ -331,8 +348,8 @@ body {
                 font-size: 10px;
               }
               @media screen and (max-width: 575px) {
-                padding: 10px 20px;
-                font-size: 16px;
+                padding: 4px 12px;
+                font-size: 12px;
               }
               @media screen and (max-width: 505px) {
                 padding: 8px 16px;
